# college-admission-openenv

./: .env.example  .gitignore  Dockerfile  README.md  __init__.py  app.py  baseline.py  blog.md  client.py  inference.py  kaggle_trl_college_env.ipynb  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py  train_trl_kaggle.py
server/: Dockerfile  __init__.py  app.py  college_env_environment.py  requirements.txt
trl_runs/college_env_qwen25_15b_unsloth/: README.md
trl_runs/college_env_qwen25_15b_unsloth/artifacts/: demonstrations.csv  evaluation_episodes.csv  evaluation_summary.csv  qualitative_traces.txt
trl_runs/college_env_qwen25_15b_unsloth/checkpoint-1/: adapter_config.json  optimizer.pt  rng_state.pth  trainer_state.json
trl_runs/college_env_qwen25_15b_unsloth/final_adapter/: adapter_model.safetensors
